--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             </div>
             <div class="spacer"></div>
             <div class="chk-sts-ctnr">
-                <p style="font-family: DINPro-Medium;padding-bottom: 10px;">Enter value 1 to 3 Check status bar for clicking below button </p>
+                <p style="font-family: DINPro-Medium;padding-bottom: 10px;">Enter value 1 to 3 - Check status bar for clicking below button.</p>
                 <input type="number" id="quantity" name="quantity" min="1" max="3">
-                <button type="button" class="btn">check staus bar</button>
+                <button type="button" class="btn">Check status bar</button>
             </div>
 
             <div class="spacer"></div>
